#3465: implemented resource patching to update roles
