# secret-service/swagger-ui/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is the API documentation of the Secret Service.",
-        "title": "Secretf Service API",
+        "title": "Secret Service API",
         "contact": {
             "name": "Keptn Team",
             "url": "http://www.keptn.sh"
@@ -16,6 +16,55 @@
     "basePath": "/v1",
     "paths": {
         "/secrets": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update an existing Secret",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Secrets"
+                ],
+                "summary": "Update a Secret",
+                "parameters": [
+                    {
+                        "description": "The updated Secret",
+                        "name": "secret",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Secret"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Secret"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -79,15 +128,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "The scope of the secret",
-                        "name": "scope",
+                        "description": "The name of the secret",
+                        "name": "name",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "The name of the secret",
-                        "name": "name",
+                        "description": "The scope of the secret",
+                        "name": "scope",
                         "in": "query",
                         "required": true
                     }
